--- a/Demo 10 - Les collections/page.html
+++ b/Demo 10 - Les collections/page.html
@@ -27,7 +27,8 @@
             <li>Valeur unique</li>
         </ul>
     </ul>
-    
-    <script src="script.js"></script>
+
+    <!-- <script src="script.js"></script> -->
+    <script src="script-clef.js"></script>
 </body>
 </html>
