--- a/Demo 10 - Les collections/page.html
+++ b/Demo 10 - Les collections/page.html
@@ -28,7 +28,7 @@
         </ul>
     </ul>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
     <script src="script-clef.js"></script>
 </body>
 </html>
