--- a/Demo 13 - Annexe/page.html
+++ b/Demo 13 - Annexe/page.html
@@ -18,6 +18,7 @@
     <h2>Les parametres de fct</h2>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="script-fct.js"></script>
 </body>
 </html>
