Demo 13 - Les callbacks

--- a/Demo 13 - Annexe/page.html
+++ b/Demo 13 - Annexe/page.html
@@ -17,8 +17,10 @@
 
     <h2>Les parametres de fct</h2>
 
+    <h2>Les callbacks</h2>
 
     <!-- <script src="script.js"></script> -->
-    <script src="script-fct.js"></script>
+    <!-- <script src="script-fct.js"></script> -->
+    <script src="script-callback.js"></script>
 </body>
 </html>
