Demo 13 - Les promesses et l'async/await

--- a/Demo 13 - Annexe/page.html
+++ b/Demo 13 - Annexe/page.html
@@ -19,8 +19,11 @@
 
     <h2>Les callbacks</h2>
 
+    <h2>Les promesses (Promise)</h2>
+
     <!-- <script src="script.js"></script> -->
     <!-- <script src="script-fct.js"></script> -->
-    <script src="script-callback.js"></script>
+    <!-- <script src="script-callback.js"></script> -->
+    <script src="script-promise.js"></script>
 </body>
 </html>
